--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 
 		img {
 			margin-top: 50px;
-			width: 300px;
+			width: 100%;
 		}
 
 		h1 {
 			margin-top: 20px;
-			color: #333;
+			font-size: 100px;
+			color: #F8B430;
 		}
 	</style>
 </head>
 
 <body>
-	<img src="in-progress-image.png" alt="In Progress">
-	<h1>Unsere Website ist in Arbeit. Bald geht's los!</h1>
+	<img src="inprogress.png" alt="In Progress">
+	<h1>ÇOK YAKINDA...</h1>
 </body>
 
 </html>
